--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="wrapper">
   <app-nav></app-nav>
-  <router-outlet [hidden]="loading"></router-outlet>
+  <router-outlet>
+    <app-create-claim-btn></app-create-claim-btn>
+  </router-outlet>
   <toast-messages></toast-messages>
   <ngx-ui-loader></ngx-ui-loader>
   <app-footer></app-footer>
