--- a/frontend/src/app/helpers/create-claim-btn/create-claim-btn.component.html
+++ b/frontend/src/app/helpers/create-claim-btn/create-claim-btn.component.html
@@ -1,4 +1,4 @@
-<div class="position-static createClaimBtn">
+<div class=" createClaimBtn" *ngIf="isShow()">
   <button type="button" class="btn btn-success btn-circle btn-xl" (click)="dnHref('create-claim')"><i
     class="fa fa-plus"></i>
   </button>
