--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,10 +1,10 @@
-<div class="card-body card-bg">
+<div class="card-body card-bg" ngxUiLoaderBlurred>
   <div class="card">
     <div class="card-body">
       <div class="row">
         <div class="btn-group btn-breadcrumb">
-          <a href="#" class="btn btn-primary"><i class="fa fa-home"></i></a>
-          <a href="#" class="btn btn-primary active">Личный кабинет</a>
+          <a href="home" class="btn btn-primary"><i class="fa fa-home"></i></a>
+          <a class="btn btn-primary active">Личный кабинет</a>
         </div>
       </div>
       <br/>
